--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -52,6 +52,7 @@
                         space: '7평',
                         latlng: new kakao.maps.LatLng({{ data.latitude }}, {{ data.longitude }}), // 원룸 좌표
                         id: {{ data.id }},
+                        main_img: '{{ data.file_set.first.file.url }}',
                     },
                 {% endfor %}
             {% endif %}
@@ -78,6 +79,7 @@
                 type: positions[i].type,
                 space: positions[i].space,
                 id: positions[i].id,
+                main_img: positions[i].main_img,
             }
 
             // 마커를 생성하고 지도위에 표시합니다
@@ -159,7 +161,7 @@
             return `
                     <a onclick="location.href=${info.id}">
                         <li>
-                            <div style="margin: 0 30px"><img width="80px" height="80ox" src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markers_sprites2.png" alt="This is a preview image of the room."></div>
+                            <div style="margin: 0 30px"><img width="80px" height="80ox" src="${info.main_img}"></div>
                             <div>
                                 <p>
                                     <h3>${info.title}</h3>
