커뮤니티 에브리타임 카피중

--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <link rel="stylesheet" href="{% static 'oneroom/oneroom_index.css' %}">
     <div class="mainContainer">
         <section>
             <div class="myMap"></div>
