--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,12 +2,11 @@
 <link rel="stylesheet" href="{% static 'nav.css' %}">
 <nav>
     <ul>
-            <li class="nav_list logo">toch</li>
-            <li class="nav_list"><a href="{% url 'oneroom:index' %}">원룸</a></li>
-            <li class="nav_list"><a href="{% url 'usedtrade:index' %}">중고거래</a></li>
-            <li class="nav_list"><a href="#">커뮤니티</a></li>
-
-            <li class="signup"><a href="{% url 'signup' %}">회원가입</a></li>
-            <li class="mypage"><a href="{% url 'mypage' %}">마이페이지</a></li>
+        <li class="nav_list logo">toch</li>
+        <li class="nav_list"><a href="{% url 'oneroom:index' %}">원룸</a></li>
+        <li class="nav_list"><a href="{% url 'usedtrade:index' %}">중고거래</a></li>
+        <li class="nav_list"><a href="{% url 'community:index' %}">커뮤니티</a></li>
+        <li class="signup"><a href="{% url 'signup' %}">회원가입</a></li>
+        <li class="mypage"><a href="{% url 'mypage' %}">마이페이지</a></li>
     </ul>
 </nav>
