--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'nav.css' %}">
 <nav>
     <ul>
-        <li class="nav_list logo">toch</li>
+        <li class="nav_list logo"><a href="{% url 'main:index' %}">toch</a></li>
         <li class="nav_list"><a href="{% url 'oneroom:index' %}">원룸</a></li>
         <li class="nav_list"><a href="{% url 'usedtrade:index' %}">중고거래</a></li>
         <li class="nav_list"><a href="{% url 'community:index' %}">커뮤니티</a></li>
