--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,8 @@
 {% load static %}
 <header>
     <div class="width1200">
-        <h1><img src="{% static 'main_tmp/images/logo.png' %}" alt="logo"><small>목포대</small></h1>
+        <h1><a href="{% url 'main:index' %}"><img src="{% static 'main_tmp/images/logo.png' %}"
+                                                  alt="logo"><small>목포대</small></a></h1>
         <nav>
             <ul>
                 <li><a href="{% url 'oneroom:index' %}"><span>원룸</span></a></li>
