--- a/static/main_tmp/css/header.css
+++ b/static/main_tmp/css/header.css
@@ -20,7 +20,7 @@ header > div h1 small{font-size: 18px; font-weight: 700; margin-left: 10px;}
 header > div nav > ul{display: flex}
 header > div nav > ul > li:not(:last-child){margin-right: 60px;}
 header > div nav > ul > li > a{font-size: 29px; font-weight: 700; line-height: 120px;}
-header > div nav > ul > li > a:hover span{position: relative;}
+header > div nav > ul > li > a:hover span{position: relative; color: black}
 header > div nav > ul > li > a:hover span::after{content: ''; position: absolute; left: 0; bottom: -3px; width: 100%; height: 10px; background-color: #ff9900; z-index: -1;}
 header > div nav > ul > li > div{display: none; position: absolute; top: 120px; left: 0; width: 100%; background-color: #f7f7f7; border-width: 1px 0; border-style: solid; border-color:#dadada;}
 header > div nav > ul > li > div div{display: flex; padding: 30px 0;}
