--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <!-- footer 템플릿 -->
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'main_tmp/css/footer.css' %}">
+<!--<link rel="stylesheet" href="{% static 'main_tmp/css/footer.css' %}">-->
 
 <footer>
     <div class="width1200">
