common 대규모 업뎃

--- a/templates/common/community_chat.html
+++ b/templates/common/community_chat.html
@@ -6,16 +6,16 @@
         <h2>메인페이지</h2>
         <ul class="menuBox">
             <li>
-                <a href="mypage_member.html">회원정보</a>
+                <a href="{% url 'common:mypage' %}">회원정보</a>
             </li>
             <li>
-                <a href="mypage_used.html" data-count="3">중고거래</a>
+                <a href="{% url 'common:usedtrade_chat' %}" data-count="3">중고거래</a>
             </li>
             <li class="active">
-                <a href="mypage_community.html" data-count="3">커뮤니티</a>
+                <a href="{% url 'common:community_chat' %}" data-count="3">커뮤니티</a>
             </li>
             <li>
-                <a href="mypage_question.html">문의</a>
+                <a href="{% url 'common:service' %}">문의</a>
             </li>
         </ul>
 
@@ -95,7 +95,7 @@
                 </div>
                 <div class="tolkArea">
                     <div class="opponentTolk">
-                        <div class="imgBox" style="background-image: url('images/mypage_used_user.png');">
+                        <div class="imgBox" style="background-image: url({% static 'images/mypage_used_user.png' %});">
                             김개똥 이미지
                         </div>
                         <blockquote>
@@ -142,3 +142,4 @@
         </div>
     </section>
 </div>
+{% endblock %}
