--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,11 @@
 <!-- footer 템플릿 -->
 {% load static %}
 
-<!--<link rel="stylesheet" href="{% static 'main_tmp/css/footer.css' %}">-->
+<!--<link rel="stylesheet" href="{% static 'css/footer.css' %}">-->
 
 <footer>
     <div class="width1200">
-        <h2><img src="{% static 'main_tmp/images/footer_logo.png' %}" alt="logo"></h2>
+        <h2><img src="{% static 'images/footer_logo.png' %}" alt="logo"></h2>
         <ul>
             <li><a href="#">이용약관</a></li>
             <li><a href="#">개인정보처리방침</a></li>
