--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,7 +10,7 @@
             <div>
                 <!-- main banner -->
                 <div class="mainBanner">
-                    <img src="{% static 'main_tmp/images/main_banner.png' %}" alt="무한한 가능성을 가진 공간 toch">
+                    <img src="{% static 'images/main_banner.png' %}" alt="무한한 가능성을 가진 공간 toch">
                     <a href="#">자세히 보기
                         <span class="material-icons-outlined">
                                 east
@@ -217,7 +217,7 @@
                             <li>
                                 <a href="#">
                                     <div class="imgBox"
-                                         style="background-image: url({% static 'main_tmp/images/villa01.png' %});">
+                                         style="background-image: url({% static 'images/villa01.png' %});">
                                         행복빌라 A동
                                     </div>
                                     <div>
@@ -233,7 +233,7 @@
                             <li>
                                 <a href="#">
                                     <div class="imgBox"
-                                         style="background-image: url({% static 'main_tmp/images/villa02.png' %});">
+                                         style="background-image: url({% static 'images/villa02.png' %});">
                                         행복빌라 A동
                                     </div>
                                     <div>
@@ -249,7 +249,7 @@
                             <li>
                                 <a href="#">
                                     <div class="imgBox"
-                                         style="background-image: url({% static 'main_tmp/images/villa03.png' %});">
+                                         style="background-image: url({% static 'images/villa03.png' %});">
                                         행복빌라 A동
                                     </div>
                                     <div>
@@ -265,7 +265,7 @@
                             <li>
                                 <a href="#">
                                     <div class="imgBox"
-                                         style="background-image: url({% static 'main_tmp/images/villa04.png' %});">
+                                         style="background-image: url({% static 'images/villa04.png' %});">
                                         행복빌라 A동
                                     </div>
                                     <div>
@@ -289,7 +289,7 @@
                     <li class="borderBox">
                         <a href="#">
                             <div class="imgBox"
-                                 style="background-image: url({% static 'main_tmp/images/oneRoom01.png' %});">원룸 이미지
+                                 style="background-image: url({% static 'images/oneRoom01.png' %});">원룸 이미지
                             </div>
                             <div>
                                 <strong>월세 60만원<small>원룸</small></strong>
@@ -301,7 +301,7 @@
                     <li class="borderBox">
                         <a href="#">
                             <div class="imgBox"
-                                 style="background-image: url({% static 'main_tmp/images/oneRoom01.png' %});">원룸 이미지
+                                 style="background-image: url({% static 'images/oneRoom01.png' %});">원룸 이미지
                             </div>
                             <div>
                                 <strong>월세 60만원<small>원룸</small></strong>
@@ -313,7 +313,7 @@
                     <li class="borderBox">
                         <a href="#">
                             <div class="imgBox"
-                                 style="background-image: url({% static 'main_tmp/images/oneRoom01.png' %});">원룸 이미지
+                                 style="background-image: url({% static 'images/oneRoom01.png' %});">원룸 이미지
                             </div>
                             <div>
                                 <strong>월세 60만원<small>원룸</small></strong>
@@ -325,7 +325,7 @@
                     <li class="borderBox">
                         <a href="#">
                             <div class="imgBox"
-                                 style="background-image: url({% static 'main_tmp/images/oneRoom01.png' %});">원룸 이미지
+                                 style="background-image: url({% static 'images/oneRoom01.png' %});">원룸 이미지
                             </div>
                             <div>
                                 <strong>월세 60만원<small>원룸</small></strong>
@@ -343,7 +343,7 @@
                     <li class="">
                         <a href="">
                             <div class="imgBox borderBox"
-                                 style="background-image: url({% static 'main_tmp/images/realTime01.png' %});">
+                                 style="background-image: url({% static 'images/realTime01.png' %});">
                                 실시간 인기 중고 이미지
                             </div>
                             <p>
@@ -371,7 +371,7 @@
                     <li class="">
                         <a href="">
                             <div class="imgBox borderBox"
-                                 style="background-image: url({% static 'main_tmp/images/realTime02.png' %});">
+                                 style="background-image: url({% static 'images/realTime02.png' %});">
                                 실시간 인기 중고 이미지
                             </div>
                             <p>
@@ -399,7 +399,7 @@
                     <li class="">
                         <a href="">
                             <div class="imgBox borderBox"
-                                 style="background-image: url({% static 'main_tmp/images/realTime03.png' %});">
+                                 style="background-image: url({% static 'images/realTime03.png' %});">
                                 실시간 인기 중고 이미지
                             </div>
                             <p>
@@ -427,7 +427,7 @@
                     <li class="">
                         <a href="">
                             <div class="imgBox borderBox"
-                                 style="background-image: url({% static 'main_tmp/images/realTime04.png' %});">
+                                 style="background-image: url({% static 'images/realTime04.png' %});">
                                 실시간 인기 중고 이미지
                             </div>
                             <p>
@@ -477,7 +477,7 @@
 
             <!-- side banner -->
             <div class="mainSideBanner">
-                <img src="{% static 'main_tmp/images/main_sideBanner.png' %}" alt="라포르테블랑 서현">
+                <img src="{% static 'images/main_sideBanner.png' %}" alt="라포르테블랑 서현">
             </div>
 
             <!-- side board -->
