--- a/templates/common/usedtrade_chat.html
+++ b/templates/common/usedtrade_chat.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
     <div class="subPage myPage">
 
@@ -7,19 +8,19 @@
             <h2>메인페이지</h2>
             <ul class="menuBox">
                 <li>
-                    <a href="mypage_member.html">회원정보</a>
+                    <a href="{% url 'common:mypage' %}">회원정보</a>
                 </li>
                 <li class="active">
-                    <a href="mypage_used.html" data-count="3">중고거래</a>
+                    <a href="{% url 'common:usedtrade_chat' %}" data-count="3">중고거래</a>
                 </li>
                 <li>
-                    <a href="mypage_community.html" data-count="3">커뮤니티</a>
+                    <a href="{% url 'common:community_chat' %}" data-count="3">커뮤니티</a>
                 </li>
                 <li>
-                    <a href="mypage_question.html">문의</a>
+                    <a href="{% url 'common:service' %}">문의</a>
                 </li>
             </ul>
-            
+
             <div class="tolkBox usedArea">
                 <div class="tolkList">
                     <ul>
@@ -88,7 +89,7 @@
                 </div>
                 <div class="tolkDetail">
                     <div class="tolkSubject">
-                        <div class="imgBox" style="background-image: url('images/mypage_used_goods.png');">
+                        <div class="imgBox" style="background-image: url({% static 'images/mypage_used_goods.png' %});">
                             상품이미지
                         </div>
                         <p>
@@ -99,8 +100,9 @@
                     </div>
                     <div class="tolkArea">
                         <div class="opponentTolk">
-                            <div class="imgBox" style="background-image: url('images/mypage_used_user.png');">
-                                김개똥 이미지    
+                            <div class="imgBox"
+                                 style="background-image: url({% static  'images/mypage_used_user.png' %});">
+                                김개똥 이미지
                             </div>
                             <blockquote>
                                 <cite>김개똥</cite>
