--- a/static/css/page.css
+++ b/static/css/page.css
@@ -267,8 +267,8 @@
 .tolkBox .tolkDetail .tolkArea > span time{font-size: 14px; color: #bbbbbb; position: relative; z-index: 1; display: inline-block; padding: 0 20px; background-color: white;}
 
 .tolkBox .tolkDetail .inputArea{margin-top: auto; padding: 20px; display: flex; min-height: 40px;}
-.tolkBox .tolkDetail .inputArea input{height: 100%; border: 1px solid #cacaca; padding: 20px 15px; box-sizing: border-box; flex: 1; width: 0;}
-.tolkBox .tolkDetail .inputArea button{height: 100%; width: 115px; display: flex; justify-content: center; align-items: center;  font-weight: 700; color: #ff9900; border: 1px solid #ff9900;}
+.tolkBox .tolkDetail .inputArea input{height: 100%; border: 1px solid #cacaca; border-radius: 11px; margin-right: 15px; padding: 14px 15px; box-sizing: border-box; flex: 1; width: 0;}
+.tolkBox .tolkDetail .inputArea button{height: 100%; width: 115px; display: flex; justify-content: center; align-items: center;  font-weight: 700; color: #ff9900; border: 1px solid #ff9900;  }
 .tolkBox .tolkDetail .inputArea button::before{content: ''; width: 22px; height: 22px; background: url('../images/inputIcon.png') no-repeat center / cover; margin-right: 25px;}
 
 
