--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -469,7 +469,7 @@
                         <input type="submit" value="로그인">
                         <div>
                             <a href="#">아이디/비밀번호 찾기</a>
-                            <a href="#">회원가입</a>
+                            <a href="{% url "common:signup" %}">회원가입</a>
                         </div>
                     </fieldset>
                 </form>
