--- a/templates/common/signup.html
+++ b/templates/common/signup.html
@@ -1,115 +1,61 @@
 {% extends 'base.html' %}
-{% load static %}
-
 {% block content %}
-    <div class="container">
-        <div>
-            <div>
-                <h4>회원가입 Sign up</h4>
-                <section class="register_content">
-                    <form name="login">
-                        <div>
-                            <br>아이디<br>
-                            <input type="text" placeholder="아이디"></input>
-                            <input type="button" value="아이디 확인">
-                        </div>
-                        <div>
-                            <br>비밀번호</br>
-                            <input type="text" placeholder="비밀번호"></input>
-                        </div>
-                        <div>
-                            <br>비밀번호 확인</br>
-                            <input type="text" placeholder="비밀번호 확인"></input>
-                            <input type="button" name="user_PWcheck" value="비밀번호 재확인">
-                        </div>
-                        <div>
-                            <br>이름</br>
-                            <input type="text" placeholder="이름을 입력해주세요"></input>
-                        </div>
-                        <div>
-                            <br>생년 월일</br>
-                            <select name="year">
-                                <option value="">-- 생년 --</option>
-                                <option value="1995">1995</option>
-                                <option value="1996">1996</option>
-                                <option value="1997">1997</option>
-                                <option value="1998">1998</option>
-                                <option value="1999">1999</option>
-                                <option value="2000">2000</option>
+    <div class="subPage loginPage">
+        <div class="joinArea">
+            <form>
+                <fieldset>
+                    <legend>회원가입</legend>
+                    <ul>
+                        <li>
+                            <label for="">아이디</label>
+                            <input type="text" placeholder="아이디">
+                        </li>
+                        <li>
+                            <label for="">비밀번호</label>
+                            <input type="password" placeholder="비밀번호">
+                        </li>
+                        <li>
+                            <label for="">비밀번호 확인</label>
+                            <input type="password" placeholder="비밀번호 확인">
+                        </li>
+                        <li>
+                            <label for="">이름</label>
+                            <input type="text" placeholder="이름을 입력해 주세요">
+                        </li>
+                        <li>
+                            <label for="">생년월일</label>
+                            <div>
+                                <input type="text" placeholder="년(4자)" >
+                                <select>
+                                    <option value="">월</option>
+                                </select>
+                                <select>
+                                    <option value="">일</option>
+                                </select>
+                            </div>
+                        </li>
+                        <li>
+                            <label for="">성별</label>
+                            <select>
+                                <option value="">남</option>
                             </select>
-                            <select name="month">
-                                <option value="">-- 월 --</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                                <option value="11">11</option>
-                                <option value="12">12</option>
-                            </select>
-                            <select name="day">
-                                <option value="">-- 일 --</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                                <option value="11">11</option>
-                                <option value="12">12</option>
-                                <option value="13">13</option>
-                                <option value="14">14</option>
-                                <option value="15">15</option>
-                                <option value="16">16</option>
-                                <option value="17">17</option>
-                                <option value="18">18</option>
-                                <option value="19">19</option>
-                                <option value="20">20</option>
-                                <option value="21">21</option>
-                                <option value="22">22</option>
-                                <option value="23">23</option>
-                                <option value="24">24</option>
-                                <option value="25">25</option>
-                                <option value="26">26</option>
-                                <option value="27">27</option>
-                                <option value="28">28</option>
-                                <option value="29">29</option>
-                                <option value="30">30</option>
-                                <option value="31">31</option>
-                            </select>
-                        </div>
-                        <div>
-                            <br>성별</br>
-                            <label for="man">남자</label>
-                            <input type="radio" name="gender" value="m" id="man">
-                            <label for="woman">여자</label>
-                            <input type="radio" name="gender" value="m" id="woman"> <br><br>
-                        </div>
-                        <div>
-                            <br>전화번호(선택)</br>
-                            <input type="text" placeholder="전화번호를 입력해주세요"></input>
-                        </div>
-                        <div>
-                            <br>이메일 주소</br>
-                            <input type="email" placeholder="이메일 주소를 입력해주세요"></input>
-                            <input type="button" value="인증번호 받기"><br>
-                            <input type="text" placeholder="인증번호를 입력하세요">
-                            <input type="button" value="확인"><br><br>
-                        </div>
-                        <br>
-                        <button>가입하기</button>
-                    </form>
-                </section>
-            </div>
+                        </li>
+                        <li>
+                            <label for="">전화 번호 (선택)</label>
+                            <input type="text" placeholder="전화 번호를 입력해주세요.">
+                        </li>
+                        <li>
+                            <label for="">이메일 주소</label>
+                            <div>
+                                <input type="text" placeholder="이메일 주소를 입력해주세요">
+                                <button>인증번호 받기</button>
+                            </div>
+                            <input type="text" placeholder="인증번호를 입력해주세요">
+                        </li>
+                    </ul>
+                    <input type="submit" value="가입하기">
+                </fieldset>
+            </form>
         </div>
     </div>
 {% endblock %}
