--- a/templates/common/community_chat.html
+++ b/templates/common/community_chat.html
@@ -28,61 +28,61 @@
                         <p>거래 보고 연락 거래 보고 연락..</p>
                         <span>3</span>
                     </li>
-                    <li>
-                        <b>익명</b>
-                        <time>오전 11:01</time>
-                        <p>팔렸나요?</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
-                    <li>
-                        <b>111</b>
-                        <time>어제</time>
-                        <p>못갈것 같아요~</p>
-                    </li>
+{#                    <li>#}
+{#                        <b>익명</b>#}
+{#                        <time>오전 11:01</time>#}
+{#                        <p>팔렸나요?</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <b>111</b>#}
+{#                        <time>어제</time>#}
+{#                        <p>못갈것 같아요~</p>#}
+{#                    </li>#}
                 </ul>
             </div>
             <div class="tolkDetail">
