--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -1,24 +1,31 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="subPage loginPage">
-    <div class="loginArea">
-        <form>
-            <fieldset>
-                <legend>로그인</legend>
-                <ul>
-                    <li>
-                        <input type="text" placeholder="아이디" title="userID">
-                    </li>
-                    <li>
-                        <input type="password" placeholder="비밀번호" title="userPW">
-                    </li>
-                </ul>
-                <p>ID에 학교 이메일 또는 Toch ID를 입력하세요.</p>
-                <input type="submit" value="로그인">
-                <p><mark><a href="login_Find.html">Toch ID 또는 암호를 잊으셨나요?</a></mark></p>
-                <p><mark>Toch ID가 없으신가요?<a href="#">지금 생성.</a></mark></p>
-            </fieldset>
-        </form>
+    <div class="subPage loginPage">
+        <div class="loginArea">
+            <form action="{% url 'common:login' %}" method="post">
+                {% csrf_token %}
+                <fieldset>
+                    <legend>로그인</legend>
+                    <ul>
+                        <li>
+                            <input type="text" placeholder="아이디" class="form-control" name="username" id="username"
+                                   title="userID">
+                        </li>
+                        <li>
+                            <input type="password" placeholder="비밀번호" class="form-control" name="password"
+                                   title="userPW">
+                        </li>
+                    </ul>
+                    <p>ID에 학교 이메일 또는 Toch ID를 입력하세요.</p>
+                    <input type="submit" value="로그인">
+                    <p>
+                        <mark><a href="login_Find.html">Toch ID 또는 암호를 잊으셨나요?</a></mark>
+                    </p>
+                    <p>
+                        <mark>Toch ID가 없으신가요?<a href="#">지금 생성.</a></mark>
+                    </p>
+                </fieldset>
+            </form>
+        </div>
     </div>
-</div>
 {% endblock %}
