--- a/templates/common/usedtrade_chat.html
+++ b/templates/common/usedtrade_chat.html
@@ -11,7 +11,7 @@
                     <a href="{% url 'common:mypage' %}">회원정보</a>
                 </li>
                 <li class="active">
-                    <a href="{% url 'common:usedtrade_chat' %}" data-count="3">중고거래</a>
+                    <a href="{% url 'common:usedtrade_chat' 0 %}" data-count="3">중고거래</a>
                 </li>
                 <li>
                     <a href="{% url 'common:community_chat' %}" data-count="3">커뮤니티</a>
@@ -24,67 +24,69 @@
             <div class="tolkBox usedArea">
                 <div class="tolkList">
                     <ul>
-                        <li class="active">
-                            <b>김개똥</b>
-                            <time>오후 9:01</time>
-                            <p>거래 보고 연락 거래 보고 연락..</p>
-                            <span>3</span>
-                        </li>
-                        <li>
-                            <b>익명</b>
-                            <time>오전 11:01</time>
-                            <p>팔렸나요?</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
-                        <li>
-                            <b>111</b>
-                            <time>어제</time>
-                            <p>못갈것 같아요~</p>
-                        </li>
+                        {% for data in data %}
+                            <li class="active">
+                                <b>{{ data.author }}</b>
+                                <time>{{ data.create_date }}</time>
+                                <p>{{ data.content }}</p>
+                                <span>3</span>
+                            </li>
+                        {% endfor %}
+                        {#                        <li>#}
+                        {#                            <b>익명</b>#}
+                        {#                            <time>오전 11:01</time>#}
+                        {#                            <p>팔렸나요?</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
+                        {#                        <li>#}
+                        {#                            <b>111</b>#}
+                        {#                            <time>어제</time>#}
+                        {#                            <p>못갈것 같아요~</p>#}
+                        {#                        </li>#}
                     </ul>
                 </div>
                 <div class="tolkDetail">
@@ -99,45 +101,29 @@
                         <button>차단</button>
                     </div>
                     <div class="tolkArea">
-                        <div class="opponentTolk">
-                            <div class="imgBox"
-                                 style="background-image: url({% static  'images/mypage_used_user.png' %});">
-                                김개똥 이미지
-                            </div>
-                            <blockquote>
-                                <cite>김개똥</cite>
-                                <q>거래 요청 드려요~거래 요청 드려요~거래 요청 드려요~ 요청 드려요~ 요청 드려요~ 요청 드려요~</q>
-                                <time>오후 9:00</time>
-                            </blockquote>
-                        </div>
-                        <div class="meTolk">
-                            <blockquote>
-                                <time>오후 9:01</time>
-                                <q>잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요</q>
-                            </blockquote>
-                        </div>
-                        <span><time>2021년 11월 10일</time></span>
-                        <div class="meTolk">
-                            <blockquote>
-                                <time>오후 9:01</time>
-                                <q>잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요</q>
-                            </blockquote>
-                        </div>
-                        <span><time>2021년 11월 10일</time></span>
-                        <div class="meTolk">
-                            <blockquote>
-                                <time>오후 9:01</time>
-                                <q>잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요</q>
-                            </blockquote>
-                        </div>
-                        <span><time>2021년 11월 10일</time></span>
-                        <div class="meTolk">
-                            <blockquote>
-                                <time>오후 9:01</time>
-                                <q>잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요</q>
-                            </blockquote>
-                        </div>
-                        <span><time>2021년 11월 10일</time></span>
+                        {% for data in data %}
+                            {% if data.author == user %}
+                                <div class="opponentTolk">
+                                    <div class="imgBox"
+                                         style="background-image: url({% static  'images/mypage_used_user.png' %});">
+                                        김개똥 이미지
+                                    </div>
+                                    <blockquote>
+                                        <cite>{{ data.author }}</cite>
+                                        <q>{{ data.content }}</q>
+                                        <time>{{ data.create_date }}</time>
+                                    </blockquote>
+                                </div>
+                            {% else %}
+                                <div class="meTolk">
+                                    <blockquote>
+                                        <time>{{ data.create_date }}</time>
+                                        <q>{{ data.content }}</q>
+                                    </blockquote>
+                                </div>
+{#                                <span><time>2021년 11월 10일</time></span>#}
+                            {% endif %}
+                        {% endfor %}
                     </div>
 
                     <div class="inputArea">
