--- a/templates/로그인 마이페이지/login.html
+++ b/templates/로그인 마이페이지/login.html
@@ -76,7 +76,7 @@
         </header>
 
         <div class="loginArea">
-            <form>
+            <formz>
                 <fieldset>
                     <legend>로그인</legend>
                     <ul>
@@ -92,7 +92,7 @@
                     <p><mark><a href="login_Find.html">Toch ID 또는 암호를 잊으셨나요?</a></mark></p>
                     <p><mark>Toch ID가 없으신가요?<a href="#">지금 생성.</a></mark></p>
                 </fieldset>
-            </form>
+            </formz>
         </div>
 
 
