--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -65,3 +65,5 @@ a{text-decoration: none; color: black; display: inline-block;}
 button{background-color: transparent; border: none; cursor: pointer;}
 
 input[type="submit"]{cursor: pointer;}
+
+input[type="password"]{font-family: Serif}
